# doodles

./: .gitignore  append.ss  arg.scm  bits.scm  brute-force-string-search.ss  btree.rkt  caeser.py  cflow.scm  ciphersaber.rkt  circ.rkt  coinflip.scm  content-tests.ss  content.ss  count-commas.scm  cp.rkt  cs.py  cvs-clean  deflate-test.ss  depth-of-field.html  divisors.rkt  djikstra.rkt  doonesbury.rkt  dumb-bridge-stuff.scm  enum.scm  error.scm  exercism  factor.scm  fib-sieve.rkt  fibs.ss  filenames.scm  files.scm  find-path-shadows.ss  finite-stack.ss  gears.scm  generate.rkt  google-scraper.ss  goto.scm  graph.scm  hello.scm  hostname  (+63 more)
SICP/: 1.3.scm  2.40.rkt  3.19.ss  3.23.scm
anagrams/: IDEAS  stats
anagrams.stable/: Laura Srebnik  Phil Greenspun  anagram  anagrams.scm  cowpoke
anagrams/c++/: Makefile.am  SConstruct  anagrams.cc  autogen.sh  bag.cc  bag.h  configure.ac  dict.cc  dict.h
anagrams/c++/exclusions-are-maps/: Makefile.am  anagrams.cc  dict.cc  numeric-bag.cc
arc/: client.arc  dfs.arc  module-idea.arc  module.arc  tourettes.arc
autogram/: README  TODO  alist-trie.ss  autogram.ss  byte-vector-counter.ss  comparative-speeds  counter.ss  globals.ss  hash-counter.ss  monitor.ss  num-string-commas.ss  odometer.ss  profile.ss  s3.scm  sentence.scm  sentence2.scm  sentences.l  trie-test.scm  trie-tests.ss  trie.scm  truths  vtrie.ss
autogram-python/: autogram.py
autogram2/: autogram.ss
aws-python/: sdb-fiddling.py
bridge/: Makefile  at-private.ss  at.ss  auction.ss  call-tests.scm  call.ss  calls.ss  card.ss  constants.ss  contract.ss  ct2.ss  dd.ss  deck-fiddling.ss  deck.ss  exceptions.ss  hand.ss  make-call.ss  map.ss  misc-tests.ss  misc.ss  multiply.ss  nad.ss  notes.txt  play-card.ss  play-history.ss  score.ss  slow.ss  swap.ss  tree-test.ss  tree.ss  yet-again.ss  yow.ss
btree/: TODO  btree.rkt  bug.rkt  convenience.rkt  perf-graph.rkt  prof.rkt  tests.rkt
cards/: cards.scm  hand.scm  splits.scm
chicken/: Makefile  hello.scm
ciphersaber/: .gitignore  ciphersaber.rkt  cruft.rkt  key-schedule.rkt  rc4.rkt  run-all-tests.sh
cl/: burp.l  go-clisp  go-sbcl  pascal.l  permutations.lisp  sb-profile.l  sentences.l  truths
clojure/: cp.sh  hello.clj
content/: content.ss
crypt/: bargraph.scm  freq.scm  jefferson-wheel.scm  jw2.scm  my-chars.scm  rsa-new.scm  rsa.example  rsa.rkt  rsa.scm  spindle.scm  this-american-life.scm  wheel-test.scm
css-via-scribble/: Makefile  README  message.scrbl  style.ss  styles.ss  utils.ss  vars.ss
doonesbury/: doonesbury.rkt  modify-rdf.rkt  sample-rss-feed.xml  sample.rkt  strip-archive-2013-02-17.html
double-dummy-solver/: Makefile  TODO  bridge.ss  card.ss  dds.ss  deck.ss  fill-out-hands.ss  filler.ss  fys.ss  hand.ss  history.ss  hmm.ss  make-dep-graph.ss  predict.ss  profile.ss  pspk.ss  run-for-a-while.ss  test-predictions.ss  tests.ss  trick.ss  zprintf.ss
drscheme/: README  all-unicode-chars.scm  bridge.ss  cards.ss  deal-randomly.ss  frame.scm  fys.ss  hello.scm  port-to-lines.ss  rotate.ss  run-filter-subprocess.ss  run-grep.ss  visible-shuffle.ss
eval/: eval10.scm  eval11.scm  read.scm  test-tail-calls.scm  test.scm  test.stupid
go/: README
google-app-engine/: helloworld.py
guile/: acronyms.scm  backup.scm  birthday.scm  camera-taxonomy  canonicalize.scm  cat.scm  chase-link.scm  check-katie-backup.scm  cvs.scm  dict.scm  doodle.scm  fermat.scm  file-as-string.scm  file-as-string2.scm  file-system-info.scm  find-old-and-big-files.scm  find.scm  fluid-let.scm  hash.scm  (+28 more)
python/concurrency-example/: Pipfile  README.md  asynchronous.py  common.py  future.py  main.py  notes  pyproject.toml  runme.sh  sequential.py  threaded.py  treeoh.py
(+1116 files in other folders)
