[tool.poetry]
name = "concurrency-example"
version = "0.1.0"
description = ""
authors = ["Eric Hanchrow <eric.hanchrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
asks = "^3.0.0"
requests = "^2.31.0"
trio = "^0.22.1"
urllib3 = "^2.0.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
