[tool.poetry]
name = "concurrency-example"
version = "0.1.0"
description = ""
authors = ["Eric Hanchrow <eric.hanchrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.7"
aiohttp = "*"
asks = "*"
requests = "*"
trio = "*"
urllib3 = "*"
tabulate = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
