[tool.poetry]
name = "concurrency-example"
version = "0.1.0"
description = ""
authors = ["Eric Hanchrow <eric.hanchrow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.8"
aiohttp = "^3.10.11"
requests = "^2.32.3"
trio = "^0.26.2"
urllib3 = "^2.2.3"
tabulate = "^0.9.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
